<resources>
    <string name="app_name">Pokemon Go Chat</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_color">Color</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered? Login.</string>
    <string name="welcome">Are you sure you want to log out?</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="color">Color</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_maps">Map</string>
</resources>
